fix product height on small size

--- a/assets/css/product.scss
+++ b/assets/css/product.scss
@@ -299,7 +299,7 @@ body {
                         display: flex;
                         outline: none;
                         min-height: 24vh;
-                        max-height: 51vh;
+                        max-height: 40vh;
                         img {
                             max-width: 100%;
                             max-height: 100%;
